fixed paragraph spacing

--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,12 @@ body {
       width: 30%; } }
   .card__image {
     width: 100%;
+    height: 16rem;
     object-fit: cover;
     object-position: center; }
+    @media only screen and (min-width: 768px) {
+      .card__image {
+        height: 22rem; } }
   .card__details {
     text-align: center;
     padding: 2rem 2rem 3.2rem 2rem; }
@@ -67,7 +71,7 @@ body {
     margin-top: 1.7rem; }
     @media only screen and (min-width: 768px) {
       .card__paragraph {
-        padding: 2rem; } }
+        padding: 0 2rem; } }
   .card__order-plan {
     display: flex;
     align-items: center;
