--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -15,8 +15,13 @@
 
   &__image {
     width: 100%;
+    height: 16rem;
     object-fit: cover;
     object-position: center;
+
+    @media only screen and (min-width: $breakpoint-tablet) {
+      height: 22rem;
+    }
   }
 
   &__details {
@@ -32,7 +37,7 @@
     margin-top: $space-1;
 
     @media only screen and (min-width: $breakpoint-tablet) {
-      padding: $space-2;
+      padding: 0 $space-2;
     }
   }
 
